--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -91,6 +91,18 @@ dependencies:
   # Visualize (random) selection processes with widgets like a spinning wheel of fortune or a fortune bar.
   flutter_fortune_wheel: ^1.3.1
 
+  # Lightweight and blazing fast key-value database written in pure Dart. Strongly encrypted using AES-256.
+  hive: ^2.2.3
+
+  # Flutter plugin for getting commonly used locations on host platform file systems, such as the temp and app data directories.
+  path_provider: ^2.1.2
+
+  # Contains code to deal with internationalized/localized messages, date and number formatting and parsing, bi-directional text, and other internationalization issues.
+  intl: ^0.18.1
+
+  # RxDart is an implementation of the popular reactiveX api for asynchronous programming, leveraging the native Dart Streams api.
+  rxdart: ^0.27.7
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -116,6 +128,9 @@ dev_dependencies:
 
   # Automatically generating `copyWith` extensions code for classes with `@CopyWith()` annotation.
   copy_with_extension_gen: ^5.0.4
+
+  # Extension for Hive. Automatically generates TypeAdapters to store any class.
+  hive_generator: ^2.0.1
 
 flutter_gen:
   output: lib/gen/
