--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -85,9 +85,6 @@ dependencies:
   # A package to include fonts from fonts.google.com in your Flutter app.
   google_fonts: ^6.1.0
 
-  # Visualize (random) selection processes with widgets like a spinning wheel of fortune or a fortune bar.
-  flutter_fortune_wheel: ^1.3.1
-
   # Lightweight and blazing fast key-value database written in pure Dart. Strongly encrypted using AES-256.
   hive: ^2.2.3
 
@@ -102,6 +99,7 @@ dependencies:
 
   # A customizable Flutter primary, accent and custom color picker. Includes an optional HSV wheel color picker.
   flex_color_picker: ^3.4.0
+  flutter_hooks: ^0.20.5
 
 dev_dependencies:
   flutter_test:
